--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,6 @@
-@import "./base.css";
+@import './base.css';
 
 nav .router-link-active {
-    background-color: #1890ff;
-    color: #fff!important;
+  background-color: #1890ff;
+  color: #fff !important;
 }
